# awscred

./: AWSCredentials.cpp  AWSCredentials.hpp  CMakeLists.txt  ProfilesDialog.cpp  ProfilesDialog.hpp  ProfilesDialog.ui  README.md  main.cpp
.github/workflows/: build.yml  virustotal.yml
src/: AWSCredentials.cpp  AWSCredentials.hpp  IniFile.cpp  IniFile.hpp  ProfilesDialog.cpp  ProfilesDialog.hpp  ProfilesDialog.ui  main.cpp
